Fixed dropdown wrapping on small screens, switched to external images for landings

--- a/src/app/category-pages/men-apparel/men-apparel.component.css
+++ b/src/app/category-pages/men-apparel/men-apparel.component.css
@@ -12,7 +12,7 @@
 
 .category-hero {
   height: 40rem;
-  background-image: url("/../assets/images/men-apparel-hero.jpg");
+  background-image: url("https://i.imgur.com/UC0HFx8.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
